[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "tp-caesar-cipher"
version = "0.1.0"

[tool.poetry.dependencies]
deal = "^4"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23"
flake8 = "^6"
hypothesis = "^6"
mutmut = "^2"
mypy = "^1"
pylint = "^2"
pytest = "^7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
