[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "caesar-cipher"
version = "0.1.0"

[tool.poetry.dependencies]
deal = "^4.11.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
hypothesis = "^6.23.0"
mutmut = "^2.2.0"
mypy = "^0.910"
pylint = "^2.11.1"
pytest = "^6.2.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
